--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:gravity="end"
             android:textSize="30sp"
             android:textColor="@color/white"
-            tools:text="5+10-3" />
+            tools:text="Type" />
 
         <TextView
             android:id="@+id/output"
@@ -33,7 +33,7 @@
             android:gravity="end"
             android:textSize="50sp"
             android:textColor="@color/green"
-            tools:text="12" />
+            tools:text="resualt" />
 
     </LinearLayout>
 
@@ -169,14 +169,16 @@
                 android:layout_height="90dp"
                 style="@style/Button_Style"
                 android:text="." />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_equals"
+                style="@style/Button_Style"
                 android:layout_width="0dp"
                 android:layout_height="90dp"
                 android:layout_weight="1"
-                style="@style/Button_Style"
                 android:background="@color/green"
-                android:text="=" />
+                android:text="="
+                android:textColor="#5D4037" />
 
         </TableRow>
     </TableLayout>
